# nodejs_resolver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: bench-rs.yml  bench.yml  ci.yml  coverage-rs.yml  coverage.yml  publish-crate.yml  publish-npm.yml  publish.yml  test-node.yml  test-rs.yml  test.yml
bench/: .gitignore  .nvmrc  README.md  package-lock.json  package.json
bench/scripts/: gen-bench.js  run.sh
crates/node-binding/: .gitignore  index.d.ts  index.js  nodejs-resolver.darwin-x64.node  package-lock.json  package.json
crates/node-binding/tests/: index.js
crates/nodejs-resolver/: .gitignore  Cargo.toml
crates/nodejs-resolver/src/: lib.rs
examples/: simple.rs
node/: .gitignore  Cargo.toml  package.json  test.js
node/src/: lib.rs
nodejs-resolver/: .gitignore  Cargo.toml  README.md
nodejs-resolver/tests/: cases.rs
scripts/: coverage.sh
src/: builder.rs  cache.rs  context.rs  description.rs  entry.rs  error.rs  fs.rs  fs_interface.rs  info.rs  kind.rs  lib.rs  log.rs  main.rs  map.rs  normalize.rs  options.rs  parse.rs  raise.rs  resolve.rs  resource.rs  state.rs  tsconfig.rs  tsconfig_path.rs  utils.rs
src/fs/: cached_fs.rs  mod.rs
src/plugin/: alias.rs  alias_field.rs  browser_field.rs  exports_field.rs  extension_alias.rs  extensions.rs  imports_field.rs  main_field.rs  main_file.rs  mod.rs  parse.rs  prefer_relative.rs  symlink.rs  tsconfig.rs
tests/: cases.rs  extensions.rs
tests/fixtures/browser-after-main/: package.json
tests/fixtures/browser-module/: package.json
tests/fixtures/browser-module/lib/sub/: package.json
tests/fixtures/cache-fs/: package.json
tests/fixtures/exports-field2/: index.js
tests/fixtures/exports-field3/: package.json
tests/fixtures/imports-field/: package.json
tests/fixtures/incorrect-package/sideeffects-map/: package.json
tests/fixtures/incorrect-package/sideeffects-other-in-array/: package.json
tests/fixtures/m.js/: index.js
tests/fixtures/main-field/: package.json
tests/fixtures/main-field-end-slash/: package.json
tests/fixtures/main-field-inexist/: package.json
tests/fixtures/main-filed-no-relative/: package.json
tests/fixtures/self-is-dep/: package.json
tests/fixtures/simple/: package.json
tests/fixtures/symlink/linked/: that
tests/fixtures/tsconfig-paths/: tsconfig.json
tests/fixtures/tsconfig-paths-extends-from-module/: tsconfig.json  tsconfig.scope.json
tests/fixtures/tsconfig-paths-missing-baseURL/: tsconfig.json  tsconfig.paths.json
tests/fixtures/tsconfig-paths-nested/: tsconfig.json
tests/fixtures/tsconfig-paths-override-baseURL/: tsconfig.json
tests/fixtures/tsconfig-paths-relative/: tsconfig.json
tests/fixtures/tsconfig-paths-without-baseURL/: tsconfig.json
