[package]
name = "nodejs-resolver"
version = "0.0.83"
edition = "2021"
license = "MIT"
description = "nodejs resolve"
repository = "https://github.com/bvanjoi/nodejs_resolver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.96", features = ["preserve_order"] }
indexmap = "1.7.0"
dashmap = "5.4.0"
daachorse = "1.0.0"
once_cell = "1.8.0"
tracing = "0.1.37"
jsonc-parser = { version = "0.21.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustc-hash = "1.1.0"
path-absolutize = "3.0.14"
dunce = "1.0.4"

[dev-dependencies]
tracing-span-tree = "0.1.1"

[profile.bench]
lto = true

[profile.release]
lto = true
