[package]
name = "nodejs-resolver"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "nodejs resolve"
repository = "https://github.com/bvanjoi/nodejs_resolver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.104", features = ["preserve_order"] }
indexmap = "2.0.0"
dashmap = "5.5.0"
daachorse = "1.0.0"
once_cell = "1.18.0"
tracing = "0.1.37"
jsonc-parser = { version = "0.22.1", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustc-hash = "1.1.0"
path-absolutize = "3.1.0"
dunce = "1.0.4"

[dev-dependencies]
tracing-span-tree = "0.1.1"

[profile.bench]
lto = true

[profile.release]
lto = true
