[package]
name = "nodejs-resolver_node"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.4.3"
napi-derive = "2"
serde_json = "1"
nodejs-resolver = { path = "../nodejs-resolver" }
serde = { version = "1.0.137", features = ["derive"] }

[build-dependencies]
napi-build = "1"